--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ margin: 0px;
     text-align: center;
 }
 
+.paragraph-up{
+    font-family: serif;
+    font-size: 20px;
+    font-weight: 300;
+    padding-bottom: 5%;
+    text-align: left;
+}
 
 .link-button{
     text-decoration: none;
